--- a/第一题.html
+++ b/第一题.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
     />
     <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="../swiper-bundle.min.css" />
+    <link rel="stylesheet" href="swiper-bundle.min.css" />
 
     <!-- Demo styles -->
     <style>
